all the changes i had to make to get it working
i had to make a bunch of changes on the server to get it to deploy.
Getting gunicorn to find the app required changing the name.

--- a/budg/templates/result.html
+++ b/budg/templates/result.html
@@ -2,9 +2,11 @@
 
 {% block body %}
 
+<p>
 {% for line in table_lines %}
-<p>{{line}}</p>
+{{line}}<br>
 {% endfor %}
+</p>
 
 <a href="/"><button>Go back</button></a>
 
